# x-proxy

./: Cargo.toml  IMPROVEMENTS.md  README.md  config.yaml
src/: lib.rs  main.rs
src/common/: config.rs  mod.rs
src/common/config/: inbound.rs  mod.rs  model.rs  outbound.rs  route.rs
src/common/util/: download_file.rs  mod.rs
src/config/: inbound.rs  info.rs  mod.rs  mode.rs  outbound.rs  router.rs
src/inbound/: model.rs
src/outbound/: model.rs
src/protocol/: mod.rs  model.rs  service.rs
src/protocol/direct/: outbound.rs
src/protocol/dns/: inbound.rs  mod.rs  model.rs
src/protocol/http/: inbound.rs  mod.rs  model.rs  outbound.rs
src/protocol/socks5/: inbound.rs  mod.rs  model.rs  outbound.rs
src/route/: mod.rs  model.rs
src/route/rule/: model.rs
src/route/rule_set/: model.rs
src/server/: inbound.rs  mod.rs  model.rs  outbound.rs  route.rs
src/server/handle/: mod.rs  model.rs
src/server/handle/http/: http.rs  mod.rs  socks5.rs
src/server/handle/socks5/: http.rs  socks5.rs
src/service/: inbound.rs  mod.rs  outbound.rs  route.rs
